--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,8 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/pariltec/public_html
-    - rsync -a --delete --exclude 'uploads/' --exclude 'ai1wm-backups/' --exclude 'cache/' wp-content/ "/wp-content/"
+    - export DEPLOYPATH=/home/pariltec/public_html/wp-content
+    - /bin/mkdir -p $DEPLOYPATH
+    - /usr/bin/rsync -a --delete wp-content/plugins/ $DEPLOYPATH/plugins/
+    - /usr/bin/rsync -a --delete wp-content/themes/  $DEPLOYPATH/themes/
+    - if [ -d wp-content/mu-plugins ]; then /usr/bin/rsync -a --delete wp-content/mu-plugins/ $DEPLOYPATH/mu-plugins/; fi
