--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,6 +3,8 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/pariltec/public_html/wp-content
     - /bin/mkdir -p $DEPLOYPATH
-    - rsync -a --delete wp-content/plugins/ $DEPLOYPATH/plugins/
-    - rsync -a --delete wp-content/themes/  $DEPLOYPATH/themes/
-    - if [ -d wp-content/mu-plugins ]; then rsync -a --delete wp-content/mu-plugins/ $DEPLOYPATH/mu-plugins/; fi
+    - rm -rf $DEPLOYPATH/plugins
+    - rm -rf $DEPLOYPATH/themes
+    - cp -R wp-content/plugins $DEPLOYPATH/plugins
+    - cp -R wp-content/themes  $DEPLOYPATH/themes
+    - if [ -d wp-content/mu-plugins ]; then rm -rf $DEPLOYPATH/mu-plugins; cp -R wp-content/mu-plugins $DEPLOYPATH/mu-plugins; fi
